--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,15 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-#theme : minimal-mistakes-jekyll
 locale                   : "en"
 title                    : "Li Zeng"
 title_separator          : "-"
 name                     : "Li Zeng"
 description              : "Powered by Jekyll and minimal-mistakes theme"
-url                      : "https://github.io.mmistakes" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : #"https://zengliX.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "/others/teaser.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+repository               : "zengliX/zengliX.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
