--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,5 +11,7 @@ main:
   #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
+  #- title: "Tags"
+  #  url: /tags/
   - title: "External Links"
     url: /links/
