--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,5 +13,7 @@ main:
   #   url: /collection-archive/
   #- title: "Tags"
   #  url: /tags/
+  - title: "Gallery"
+    url: /gallery/
   - title: "External Links"
     url: /links/
