--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "li.zeng.188"
+  facebook         :
   foursquare       :
   github           : "zengliX"
   google_plus      :
@@ -100,7 +100,7 @@ author:
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
   steam            :
   tumblr           :
-  twitter          : "Curious_Cat_zZ"
+  twitter          :
   vine             :
   weibo            :
   xing             :
